# Engineer_project

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  cleanup_vehicles.py  entrypoint.sh  load_vehicles.py  pyproject.toml
backend/backend/: celery.py  settings.py  urls.py
backend/car_history/: admin.py  apps.py  filters.py  forms.py  locustfile.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/car_history/car_history/: asgi.py  models.py  roles.py  rules.py  settings.py  urls.py  wsgi.py
backend/car_history/management/commands/: load_vehicles.py  upload_cloudinary.py
backend/car_history/migrations/: 0001_initial.py  0002_comment_discussion_vehiclegeneration_vehiclemake_and_more.py  0002_remove_user_role.py  0002_vehicle_fuel_type.py  0003_alter_serviceentry_vehicle.py  0003_user_joined_date.py  0003_vehicle_production_year.py  0004_alter_serviceentry_vehicle.py  0004_alter_user_joined_date_post.py  0004_remove_vehicle_image_vehicleimage.py  0005_comment_discussion_delete_post_comment_discussion.py  0005_vehicle_registration.py  0005_vehiclesale.py  0006_alter_damageentry_vehicle.py  0006_alter_discussion_options_and_more.py  0007_alter_message_options_message_is_read.py  0007_vehiclesalestats.py  0008_message_sale.py  0008_user_created_at_user_updated_at.py  0009_remove_vehicle_color_remove_vehicle_id_and_more.py  0009_remove_vehicle_wheel_size_vehicle_drive_type_and_more.py  0010_user_avatar.py  0011_vehicle_history_pdf.py  0012_alter_discussion_options_discussion_comments_count_and_more.py  0013_commentstats.py  0014_comment_dislikes_count_comment_likes_count.py  0015_discussion_likes_count.py  0016_discussion_dislikes_count_discussion_favorites_count_and_more.py  0017_alter_serviceentry_description.py  0018_alter_damageentry_description_and_more.py  0019_alter_damageentry_description_and_more.py  0020_remove_damageentry_photos_damagephoto.py  0021_alter_vehicle_first_registration.py  0022_comment_content_length_alter_comment_created_at_and_more.py  0023_vehicle_images_count.py  0024_alter_comment_discussion.py  0025_comment_car_history_discuss_e47345_idx_and_more.py
backend/car_history/static/css/: pdf_styles.css
backend/car_history/tests/: test_create_vehicle.py
backend/car_history/tests/test_integration/: test_vehicle_integration.py  test_vehicle_permission.py
backend/car_history/tests/test_unit/: test_create_vehicle.py
backend/templates/: vehicle_history_pdf.html
frontend/: .dockerignore  Dockerfile  jsconfig.json  next.config.mjs  package-lock.json  package.json  server.js
(+122 files in other folders)
