[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "pakupek",email = "adam.akimowicz13@onet.eu"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==4.2.20)",
    "django-axes (==7.0.2)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
