[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "pakupek",email = "adam.akimowicz13@onet.eu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==4.2.20)",
    "django-axes (==7.0.2)",
    "sqlparse (==0.5.3)",
    "typing-extensions >=4.15.0",
    "tzdata (==2025.2)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "selenium (>=4.37.0,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "django-filter (==23.5)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
    "requests (>=2.32.4,<3.0.0)",
    "weasyprint (>=66.0,<67.0)",
    "django-extensions (>=4.1,<5.0)",
    "graphviz (>=0.21,<0.22)",
    "pydot (>=4.0.1,<5.0.0)",
    "locust (>=2.42.5,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "sib-api-v3-sdk (>=7.6.0,<8.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "django-cloudinary-storage (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
